--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,3 +57,19 @@
   margin-bottom: 30px;
   padding-bottom: 30px;
 }
+
+th {
+  .current {
+    padding-right: 12px;
+    background-repeat: no-repeat;
+    background-position: right center;
+  }
+
+  .asc {
+    background-image: url(/images/up_arrow.gif);
+  }
+
+  .desc {
+    background-image: url(/images/down_arrow.gif);
+  }
+}
